IVYPORTAL-16308 UI Integration and Styling - Widget configuration step - Fix broken UI

--- a/AxonIvyPortal/portal/webContent/resources/css/dashboard.css
+++ b/AxonIvyPortal/portal/webContent/resources/css/dashboard.css
@@ -1805,3 +1805,6 @@ body .ui-button.rounded-button.dashboard-widget-filter__remove-filter .ui-icon {
 .id-filter-operator-panel {
   min-width: 130px;
 }
+.text-list-filter{
+  max-width: 60%;
+}
